# Keylogger-Linux-X11

./: .gitignore  CMakeLists.txt  README.md  keylogger.cpp
src/: keylogger.cpp
src/app/: application.cpp  application.hpp
src/ui/: AnimatedBorder.cpp  AnimatedBorder.hpp  BrutalistButton.hpp  MainWindow.cpp  MainWindow.hpp  main_ui.cpp
src/ui/components/: AnimatedBorder.cpp  BrutalistButton.cpp  BrutalistButton.hpp  KeyLogBlock.cpp  KeyLogBlock.hpp
src/ui/pages/ClicksPageWidget/: ClicksPageWidget.cpp  ClicksPageWidget.hpp
src/ui/pages/LogsPageWidget/: LogsPageWidget.cpp  LogsPageWidget.hpp
src/ui/pages/PlaceholderPageWidget/: PlaceholderPageWidget.cpp  PlaceholderPageWidget.hpp
src/ui/utils/WindowColorManager/: WindowColorManager.cpp  WindowColorManager.hpp
src/ui/widgets/: NotificationWidget.cpp  NotificationWidget.hpp
src/ui/windows/: MainWindow.cpp  MainWindow.hpp
src/utils/common/: common.cpp  common.hpp
src/utils/cyrillicHelper/: cyrillicHelper.cpp  cyrillicHelper.hpp
src/utils/keyPressHelper/: keyPressHelper.cpp  keyPressHelper.hpp
src/utils/keyboardEventHelper/: keyboardEventHelper.cpp  keyboardEventHelper.hpp
src/utils/mouseTrackerHelper/: mouseTracker.cpp  mouseTracker.hpp
src/utils/processTrackingHelper/: processTracking.cpp  processTracking.hpp
src/utils/specialKeysHelper/: specialKeysHelper.cpp  specialKeysHelper.hpp
src/utils/windowTrackingHelper/: windowTracking.cpp
